# app

./: .env.development  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  clean.sh  com.selladomx.SelladoMX.metainfo.xml  com.selladomx.SelladoMX.yml  create-dmg.sh  pyproject.toml  reset_onboarding.py  run.py  selladomx.spec  test_onboarding.py  test_redesigned_ui.py
.github/workflows/: build.yml  codeql.yml  update-flathub.yml
assets/: README-Windows.txt  README.md  icon.icns  selladomx.desktop  selladomx.icns
docs/: DYNAMIC_PRICING.md  URL_SCHEME_REGISTRATION.md
docs/developer/: architecture.md  development.md  packaging.md
docs/user/: certificates.md  installation.md  troubleshooting.md
scripts/: build-appimage.sh  build-flatpak.sh  build.sh  clean.sh  create-dmg.sh  flatpak-launcher.sh  generate-icons.py  generate-python-deps.sh  register-url-scheme-windows.bat  reset_onboarding.py  test_url_scheme.py
src/selladomx/: __init__.py  config.py  errors.py  main.py
src/selladomx/api/: __init__.py  client.py  exceptions.py
src/selladomx/signing/: __init__.py  certificate_validator.py  pdf_signer.py  tsa.py  worker.py
src/selladomx/ui/: api_key_dialog.py  design_tokens.py  main_window_legacy.py  redesigned_main_view.py  token_management_dialog.py
src/selladomx/utils/: __init__.py  deep_link_handler.py  platform_helpers.py  settings_manager.py  update_checker.py
tests/: __init__.py  test_certificate_validator.py  test_e2e_signing.py  test_main_view_model.py  test_pdf_signer.py  test_settings_manager.py  test_signing_worker.py  test_tsa.py
tests/fixtures/: README.md
tests/fixtures/certs/: .gitignore
(+35 files in other folders)
