[tool.poetry]
name = "selladomx"
version = "0.4.1"
description = "Firma digital de PDFs con certificados e.firma del SAT"
authors = ["SelladoMX Team"]
readme = "README.md"
packages = [{include = "selladomx", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "^6.10.2"
pyhanko = "^0.27.1"
pyhanko-certvalidator = "^0.26.0"
cryptography = "^46.0.5"
requests = "^2.31.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-qt = "^4.2.0"
black = "^26.1.0"
pyinstaller = "^6.19.0"

[tool.poetry.scripts]
selladomx = "selladomx.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]
